--- a/report/section-introduction.tex
+++ b/report/section-introduction.tex
@@ -3,15 +3,15 @@
 
 In his \emph{Foundations of Arithmetic}, Frege promises ``never to ask for the meaning
 of a word in isolation, but only in the context of a proposition''
-\parencite*[xvii]{Frege1960}.
+\parencites*[xvii]{Frege1960}.
 This `context principle' is intuitive: words are frequently polysemous, or assume
 different connotations and emphasis within different expressions
-\parencite[2-3]{Armendariz2020}.
+\parencites[2-3]{Armendariz2020}.
 Historically, however, context-dependence has been a problem for distributional meaning
 representations.
-Founded on the distributional hypothesis \parencite[e.g.,][142-143]{Turney2010}, both
+Founded on the distributional hypothesis \parencites[e.g.,][142-143]{Turney2010}, both
 count-based and predictive models of word meaning\footnote{This terminological
-  distinction is due to \textcite{Baroni2014a}.
+  distinction is due to \textcites{Baroni2014a}.
 } originally
 produced a single representation for each word in the model's vocabulary.
 One of these \emph{static} embeddings must, therefore, encode all of a word's senses
@@ -24,15 +24,15 @@ for each sense of a target word and disambiguating between them in the given con
 word with the representations of the words in its context (contextualization).
 These approaches have been largely overshadowed by the advent of model architectures
 that take sequences as inputs and naturally produce \emph{contextual} representations
-of the items in the sequence, such as Transformers \parencite{Vaswani2017}.
+of the items in the sequence, such as Transformers \parencites{Vaswani2017}.
 To my knowledge, however, there has been scant direct comparison of the performance of
 these contextual embeddings with the application of prior methods of contextualization
 to static embeddings.
 
-SemEval-2020 Task 3, ``Graded Word Similarity in Context'' \parencite{Armendariz2020a},
-presents an opportunity to make such a comparison.
-Briefly, the task is to predict the human judgment of similarity of the same pair of
-words in two different contexts.
+SemEval-2020 Task 3, ``Graded Word Similarity in Context''
+\parencites{Armendariz2020a}, presents an opportunity to make such a comparison.
+Briefly, the task is to predict the human judgment of similarity of a pair of words in
+two different contexts.
 I elected to focus on the first sub-task, which is to predict the \emph{change} in
 similarity, rather than the absolute similarity in each context.
 Specifically, I evaluated the results obtained by computing the cosine similarity
