--- a/report/table-evaluation-best-score.tex
+++ b/report/table-evaluation-best-score.tex
@@ -68,8 +68,8 @@
   \caption{The best scores on the evaluation dataset for each kind of embedding -- in
     all cases, it was obtained with the composition operation of addition.
     The best overall score for each language is underlined.
-    The predicted and actual human judgments of the change in similarity for the best
-    overall models are shown in \cref{chart:predicted}.
+    The predicted and actual human judgments of the change in similarity for the models
+    with the best overall scores are shown in \cref{chart:predicted}.
   }
   \label{table:evaluation-best-score}
 \end{table}
