--- a/report/section-methodology.tex
+++ b/report/section-methodology.tex
@@ -7,20 +7,20 @@
 I undertook this task to investigate the relative performance of pre-trained static and
 contextual embeddings for a context-dependent word-similarity task.
 The baseline models for the task were the multilingual BERT model
-\parencite{Devlin2019} and ELMo models \parencite{Peters2018a} trained on Finnish,
-Croatian, and Slovene datasets \parencite{Ulcar2020a},\footnote{I did not directly
+\parencites{Devlin2019} and ELMo models \parencites{Peters2018a} trained on Finnish,
+Croatian, and Slovene datasets \parencites{Ulcar2020a},\footnote{I did not directly
   reproduce the baseline models because the first requires the \texttt{bert-embedding}
   Python package, which has been deprecated since 2020 and is incompatible with Apple's
-  ARM-based processors \parencite{Lai2023}.
+  ARM-based processors \parencites{Lai2023}.
   However, it is notionally equivalent to the contextual embeddings of the
   \texttt{bert-base-multilingual-cased} model with a window size of zero.
 } and the vast majority of the task
-submissions were based on Transformers \parencite[36,42-45]{Armendariz2020a}, so I
+submissions were based on Transformers \parencites[36,42-45]{Armendariz2020a}, so I
 chose to evaluate a variety of pre-trained Transformer models.
 Because both static and contextual embeddings can be obtained from a Transformer model,
 this approach facilitated a direct comparison between them.
 The models that I evaluated were accessed via the HuggingFace \emph{Transformers}
-library \parencite{Wolf2020a} and are listed in \cref{table:language-models}.
+library \parencites{Wolf2020a} and are listed in \cref{table:language-models}.
 
 \begin{table}
   \centering
@@ -61,10 +61,10 @@ library \parencite{Wolf2020a} and are listed in \cref{table:language-models}.
     \bottomrule
   \end{tabular}
   \caption{The pre-trained models from the HuggingFace \emph{Transformers} library
-    \parencite{Wolf2020a} that I evaluated for each language.
-    The corresponding references are \textsuperscript{1}\textcite{Ulcar2020},
-    \textsuperscript{2}\textcite{Virtanen2019}, \textsuperscript{3}\textcite{Ljubesic2021},
-    and \textcite{Devlin2019} otherwise.
+    \parencites{Wolf2020a} that I evaluated for each language.
+    The corresponding references are \textsuperscript{1}\textcites{Ulcar2020},
+    \textsuperscript{2}\textcites{Virtanen2019},
+    \textsuperscript{3}\textcites{Ljubesic2021}, and \textcites{Devlin2019} otherwise.
   }
   \label{table:language-models}
 \end{table}
@@ -73,10 +73,10 @@ The primary comparison that I made was between the static input and contextual o
 representations of these models.
 Several of the task submissions used a combination of a Transformer's hidden-states
 \parencites[e.g.][276]{Gamallo2020}[61]{CostellaPessutto2020}[145]{Hettiarachchi2020}.
-This choice is supported by the analysis of \textcite{Ethayarajh2019}, who found that
+This choice is supported by the analysis of \textcites{Ethayarajh2019}, who found that
 the upper layers of Transformer models produce more context-dependent representations.
-Hence, I also evaluated an example of pooling hidden-states -- a thorough comparison of
-its variants is, however, beyond the scope of this paper.
+Hence, I also evaluated an example of pooling hidden-states.
+However, a thorough comparison of its variants is beyond the scope of this paper.
 \begin{samepage}
   Hereafter, I refer to the kinds of embeddings that I evaluated as:
   \begin{itemize}
@@ -99,8 +99,8 @@ obtained a contextualized representation of a target word by:
   \item composing the embeddings to produce a single representation.
 \end{enumerate}
 Notably, the use of a sub-word vocabulary by the models in question
-\parencite[e.g.,][4174]{Devlin2019} dictates that a target word may be represented by a
-different number of tokens in each context.
+\parencites[e.g.,][4174]{Devlin2019} dictates that a target word may be represented by
+a different number of tokens in each context.
 As a result, the similarity between the representations of a pair of target words may
 be different in each context, even if the representations are individual static
 embeddings.
@@ -137,13 +137,9 @@ for the Finnish language (\cref{sec:language-specificity}).
   \label{chart:schematic-procedure}
 \end{figure}
 
-Inspired by \textcite{Landauer1997}, \textcite{Kintsch2001}, and
-\textcite{Mitchell2008}, I primarily investigated element-wise addition and
+Inspired by \textcites{Landauer1997}, \textcites{Kintsch2001}, and
+\textcites{Mitchell2008}, I primarily investigated element-wise addition and
 multiplication as composition operations to contextualize embeddings.
-The cosine similarity between two vectors is invariant with respect to the
-multiplication of the vectors by scalars, so the results of composing the embeddings
-within a fixed-size context window by addition or the arithmetic mean are equal.
-Hence, I did not also investigate the arithmetic mean.
 Preliminary experiments indicated that multiplication performed poorly across all
 languages, models, and window sizes, so it was discarded before the final analysis on
 the evaluation dataset.
@@ -154,6 +150,10 @@ right-padded the concatenated embeddings with zeros to obtain representations of
 length.
 This approach was also generally inferior to addition, as discussed in
 \cref{sec:hyperparameter-search}.
+The cosine similarity between two vectors is invariant with respect to the
+multiplication of the vectors by scalars, so the results of composing the embeddings
+within a fixed-size context window by addition or the arithmetic mean are equal.
+Hence, I did not also investigate the arithmetic mean.
 
 \subsection{Window size} \label{sec:window-size}
 
@@ -169,6 +169,6 @@ was economical, due to their greater computational expense (\cref{sec:cost-benef
 However, as the window size approaches the length of the sequence, I expected a
 combination of token representations to be superseded by the sequence-level
 representation of the model, e.g., the special \texttt{CLS} token of BERT models
-\parencite[4174]{Devlin2019}.
+\parencites[4174]{Devlin2019}.
 These heuristics were largely vindicated by the results on the evaluation dataset,
 which showed that the scores decrease as the window size approaches the maximum.
