--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -5,7 +5,7 @@
 
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[L]{SemEval-2020 Task 3}
+\fancyhead[L]{SemEval-2020 Task 3: Graded Word Similarity in Context}
 \fancyhead[R]{Tim Lawson}
 \fancyfoot[C]{\thepage}
 % \fancyfoot[R]{\wordcount{}words}
