--- a/report/section-conclusion.tex
+++ b/report/section-conclusion.tex
@@ -38,4 +38,4 @@ information retrieval systems that are based on static or contextual embeddings 
 e.g., determining contextually-appropriate synonyms of the keywords in a search query.
 The word-similarity task itself could also form part of an assessment of the costs and
 benefits of using static or contextual embeddings in a particular application, based on
-its resource constraints.
+its resource constraints (\cref{sec:cost-benefit}).
