--- a/report/section-related-work.tex
+++ b/report/section-related-work.tex
@@ -3,18 +3,18 @@
 
 \subsection{Composition and contextualization}
 
-Many context-based approaches to composition and contextualization have been proposed
-since the advent of count-based models of word meaning.
-With reference to Latent Semantic Analysis \parencites{Deerwester1990}, for example,
+Many approaches to composition and contextualization have been proposed since the
+advent of count-based models of word meaning.
+For example, with reference to Latent Semantic Analysis \parencites{Deerwester1990},
 \citeauthor{Landauer1997} argued that taking the average of the high-dimensional
 representation of a word and the representations of the words in its context may
 suffice to determine the word's contextual meaning \parencites*[229-230]{Landauer1997}.
 Thus, the contextualization of representations of word meanings is intimately related
 to their composition to form representations of more complex expressions.
-This relationship is evident, for example, in the work of \textcites{Kintsch2001}, who
-proposed a procedure to contextualize the representation of a predicate according to
-its argument, and in the adaptation of this demonstration by \textcites{Mitchell2008}
-to evaluate alternative composition operations.
+This relationship is evident in the work of \textcites{Kintsch2001}, who proposed a
+procedure to contextualize the representation of a predicate according to its argument,
+and in the adaptation of this demonstration by \textcites{Mitchell2008} to evaluate
+alternative composition operations.
 Vector addition and averaging continue to be `surprisingly effective' means to compose
 word embeddings \parencites[10]{Boleda2020}, and addition produces plausible results
 for the word-analogy task \parencites[9]{Mikolov2013}[7]{Mikolov2013a}, though its
