--- a/report/section-results.tex
+++ b/report/section-results.tex
@@ -8,8 +8,8 @@
 
 In \cref{sec:cost-benefit,sec:language-specificity}, I present the results for
 different models on the \emph{evaluation} dataset.
-However, it would not have been possible to optimize hyperparameters on the evaluation
-dataset.
+However, it would not have been possible or legitimate as a task submission to optimize
+hyperparameters on the evaluation dataset.
 Therefore, I also optimized them on the `practice kit' dataset
 (\cref{sec:task-definition}) to select a candidate model for each language and kind of
 embedding.
