--- a/report/section-related-work.tex
+++ b/report/section-related-work.tex
@@ -9,8 +9,8 @@ For example, with reference to Latent Semantic Analysis \parencites{Deerwester19
 \citeauthor{Landauer1997} argued that taking the average of the high-dimensional
 representation of a word and the representations of the words in its context may
 suffice to determine the word's contextual meaning \parencites*[229-230]{Landauer1997}.
-Thus, the contextualization of representations of word meanings is intimately related
-to their composition to form representations of more complex expressions.
+Thus, the two procedures are intimately related.
+
 This relationship is evident in the work of \textcites{Kintsch2001}, who proposed a
 procedure to contextualize the representation of a predicate according to its argument,
 and in the adaptation of this demonstration by \textcites{Mitchell2008} to evaluate
@@ -36,6 +36,7 @@ organization or in a resource-constrained environment
 For instance, \textcites{Lenci2022} found that static embeddings generally outperform
 BERT \parencites{Devlin2019} on word-similarity and -association tasks, provided
 optimal hyperparameters.
+
 Relatedly, \textcites{Arora2020} have shown that static and even \emph{random}
 embeddings can perform comparably to contextual embeddings, which
 \textcites[5244-5246]{Gupta2019}[4760-4762]{Bommasani2020} have demonstrated for
@@ -61,6 +62,7 @@ to more specific tasks \parencites[8-9]{Batchkarov2016}.
 In this case, \textcites[8]{Armendariz2020}[42]{Armendariz2020a} reported similar
 inter-annotator correlations between the different languages and to those of the
 SimLex-999 dataset \parencites[678-680]{Hill2015}.
+
 In the present context, we are explicitly concerned with the ability of pre-trained
 embeddings to capture context-dependent similarity judgments.
 However, the interpretation of distributional semantic models as explanatory theories
