--- a/report/graded-similarity.sty
+++ b/report/graded-similarity.sty
@@ -7,6 +7,7 @@
   margin={1in,1in},
 }
 \usepackage{setspace}
+\onehalfspacing
 
 % Typography
 % https://ctan.math.washington.edu/tex-archive/fonts/etbb/doc/ETbb-doc.pdf
