--- a/report/section-results.tex
+++ b/report/section-results.tex
@@ -28,46 +28,6 @@ Generally, the benefit of additional `training' data is evident.
 
 \input{table-practice-best-score.tex}
 
-\subsection{Cost-benefit analysis of contextual embeddings}
-\label{sec:cost-benefit}
-
-\input{figure-prediction.tex}
-
-\input{figure-score-time.tex}
-
-In the main, greater scores were achieved with contextual and pooled embeddings than
-with static embeddings (\cref{table:practice-best-score,table:evaluation-best-score}).
-However, static embeddings make up a small fraction of the size of a contextual
-language model.
-For example, BERT's vocabulary size is approximately $30000$, the dimensions of the
-\texttt{bert-base} and \texttt{bert-large} variants' hidden-states are $768$ and
-$1024$, and their total parameters are $110$M and $340$M respectively
-\parencites[4173-4174]{Devlin2019}.
-Static embeddings thus make up approximately $21$\% and $9$\% of the total parameters.
-It is also much faster to compute a contextualized representation from static
-embeddings than to run inference on a language model.
-For a naïve implementation of the procedure described in \cref{sec:methodology}, the
-approximate time taken to compute the change in similarity between two words in context
-is shown in \cref{chart:score-time}.
-It is notably greater for contextual embeddings.
-The right-most cluster is due to the \texttt{large} model variants.
-
-\input{table-evaluation-best-score.tex}
-
-I quantified the significance of the differences between the scores obtained with
-different kinds of embeddings by paired $t$-tests and the Nemenyi test
-\parencites{Demsar2006} on the scores of the best models over ten random samples of
-90\% of the evaluation dataset (\cref{table:evaluation-best-score}).
-For each pair of models, the null hypothesis was that the differences between the mean
-scores were due to chance.
-For each language, either contextual or pooled embeddings significantly outperformed
-static embeddings, but did not differ significantly from each other
-(\cref{table:significance}).
-Hence, the results support the conclusion that contextual embeddings are more effective
-than static embeddings for this task.
-
-\input{table-significance.tex}
-
 \subsection{Language-specificity of window-size dependence}
 \label{sec:language-specificity}
 
@@ -94,3 +54,45 @@ small fraction of the model's vocabulary.
 Accordingly, I found that Finnish-specific models generally outperformed multilingual
 ones and that the scores varied more widely with window size for Finnish than the other
 languages.
+
+\newpage
+
+\subsection{Cost-benefit analysis of contextual embeddings}
+\label{sec:cost-benefit}
+
+\input{figure-prediction.tex}
+
+\input{figure-score-time.tex}
+
+In the main, greater scores were achieved with contextual and pooled embeddings than
+with static embeddings (\cref{table:practice-best-score,table:evaluation-best-score}).
+However, static embeddings make up a small fraction of the size of a contextual
+language model.
+For example, BERT's vocabulary size is approximately $30000$, the dimensions of the
+\texttt{bert-base} and \texttt{bert-large} variants' hidden-states are $768$ and
+$1024$, and their total parameters are $110$M and $340$M respectively
+\parencites[4173-4174]{Devlin2019}.
+Static embeddings thus make up approximately $21$\% and $9$\% of the total parameters.
+It is also much faster to compute a contextualized representation from static
+embeddings than to run inference on a language model.
+For a naïve implementation of the procedure described in \cref{sec:methodology}, the
+approximate time taken to compute the change in similarity between two words in context
+is shown in \cref{chart:score-time}.
+It is notably greater for contextual embeddings, and the right-most cluster is due to
+the \texttt{large} model variants.
+
+\input{table-evaluation-best-score.tex}
+
+I quantified the significance of the differences between the scores obtained with
+different kinds of embeddings by paired $t$-tests and the Nemenyi test
+\parencites{Demsar2006} on the scores of the best models over ten random samples of
+90\% of the evaluation dataset (\cref{table:evaluation-best-score}).
+For each pair of models, the null hypothesis was that the differences between the mean
+scores were due to chance.
+For each language, either contextual or pooled embeddings significantly outperformed
+static embeddings, but did not differ significantly from each other
+(\cref{table:significance}).
+Hence, the results support the conclusion that contextual embeddings are more effective
+than static embeddings for this task.
+
+\input{table-significance.tex}
