--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -3,34 +3,36 @@
 
 \begin{document}
 
+\newcommand{\authortext}{Tim Lawson}
+\newcommand{\titletext}{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
+
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[L]{\nouppercase{\leftmark}}
-\fancyhead[R]{Tim Lawson}
+\fancyhead[R]{\authortext}
 \fancyfoot[C]{\thepage}
-% \fancyfoot[R]{\wordcount{}words}
 
-\title{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
-\author[]{Tim Lawson}
+\title{\titletext}
+\author[]{\authortext}
 \affil[]{University of Bristol}
 \affil[]{\texttt{tim.lawson@bristol.ac.uk}}
 \date{}
 
 \maketitle
 
-\input{table.tex}
+\input{table}
 
-\input{section-introduction.tex}
+\input{sections/section-introduction}
 
-\input{section-task-definition.tex}
+\input{sections/section-task-definition}
 
-\input{section-related-work.tex}
+\input{sections/section-related-work}
 
-\input{section-methodology.tex}
+\input{sections/section-methodology}
 
-\input{section-results.tex}
+\input{sections/section-results}
 
-\input{section-conclusion.tex}
+\input{sections/section-conclusion}
 
 \printbibliography
 
