--- a/report/sections/section-conclusion.tex
+++ b/report/sections/section-conclusion.tex
@@ -18,7 +18,7 @@ have access to the evaluation dataset prior to submitting their results, only th
 hyperparameters like the window size (\cref{sec:hyperparameter-search}).
 The models that I used were also not necessarily available at the time
 (\cref{sec:embedding-models}).
-With these caveats, I achieved several notable results (\cref{table:evaluation-best-score}):
+With these caveats, I achieved several notable results (\cref{table:best-score-evaluation}):
 \begin{itemize}
   \item The pooled embeddings of \texttt{EMBEDDIA/crosloengual-bert} with a window
         size of three would have placed second among the Croatian submissions, with a
