--- a/report/sections/section-introduction.tex
+++ b/report/sections/section-introduction.tex
@@ -27,7 +27,7 @@ that take sequences as inputs and naturally produce \emph{contextual} representa
 of the items in the sequence, such as Transformers \parencites{Vaswani2017}.
 To my knowledge, however, there has been scant direct comparison of the performance of
 these contextual embeddings with the application of prior methods of contextualization
-to static embeddings.
+to static embeddings \parencites[see][]{Milajevs2014}.
 
 SemEval-2020 Task 3, ``Graded Word Similarity in Context''
 \parencites{Armendariz2020a}, presents an opportunity to make such a comparison.
