--- a/report/sections/section-related-work.tex
+++ b/report/sections/section-related-work.tex
@@ -9,12 +9,11 @@ For example, with reference to Latent Semantic Analysis \parencites{Deerwester19
 \citeauthor{Landauer1997} argued that taking the average of the high-dimensional
 representation of a word and the representations of the words in its context may
 suffice to determine the word's contextual meaning \parencites*[229-230]{Landauer1997}.
-Thus, the two procedures are intimately related.
+The relationship between composition and contextualization is evident in the work of
+\textcites{Kintsch2001}, who proposed a procedure to contextualize the representation
+of a predicate according to its argument, and its adaptation by
+\textcites{Mitchell2008} to evaluate alternative composition operations.
 
-This relationship is evident in the work of \textcites{Kintsch2001}, who proposed a
-procedure to contextualize the representation of a predicate according to its argument,
-and in the adaptation of this demonstration by \textcites{Mitchell2008} to evaluate
-alternative composition operations.
 Vector addition and averaging continue to be `surprisingly effective' means to compose
 word embeddings \parencites[10]{Boleda2020}, and addition produces plausible results
 for the word-analogy task \parencites[9]{Mikolov2013}[7]{Mikolov2013a}, though its
@@ -33,10 +32,10 @@ Furthermore, the social and environmental costs of deploying a large model may n
 justifiable, and the necessary computational resources may be prohibitive to a smaller
 organization or in a resource-constrained environment
 \parencites[142-145,154]{Bommasani2022}.
+
 For instance, \textcites{Lenci2022} found that static embeddings generally outperform
 BERT \parencites{Devlin2019} on word-similarity and -association tasks, provided
 optimal hyperparameters.
-
 Relatedly, \textcites{Arora2020} have shown that static and even \emph{random}
 embeddings can perform comparably to contextual embeddings, which
 \textcites[5244-5246]{Gupta2019}[4760-4762]{Bommasani2020} have demonstrated for
