--- a/report/sections/section-methodology.tex
+++ b/report/sections/section-methodology.tex
@@ -118,4 +118,5 @@ combination of token representations to be superseded by the sequence-level
 representation of the model, e.g., the special \texttt{CLS} token of BERT models
 \parencites[4174]{Devlin2019}.
 These heuristics were largely vindicated by the results on the evaluation dataset,
-which showed that the scores decrease as the window size approaches the maximum.
+which showed that the scores decrease as the window size approaches the maximum
+\parencref{figure:score-window-evaluation-static,figure:score-window-evaluation-contextual,figure:score-window-evaluation-pooled}.
