--- a/report/sections/section-results-cost-benefit/table-significance.tex
+++ b/report/sections/section-results-cost-benefit/table-significance.tex
@@ -10,7 +10,7 @@
       column name=Embeddings,
       string type},
   columns/score1/.style={
-      column name={Score},
+      column name={Mean score},
       column type={r},
       fixed,
       fixed zerofill,
@@ -19,7 +19,7 @@
       column name=Embeddings,
       string type},
   columns/score2/.style={
-      column name={Score},
+      column name={Mean score},
       column type={r},
       fixed,
       fixed zerofill,
