--- a/report/graded-similarity.tex
+++ b/report/graded-similarity.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \newcommand{\authortext}{Tim Lawson}
-\newcommand{\titletext}{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-trained Embeddings}
+\newcommand{\titletext}{SemEval-2020 Task 3: Graded Word Similarity in Context by Composing Pre-Trained Embeddings}
 
 \pagestyle{fancy}
 \fancyhf{}
